--- a/GDriveUploader.ipynb
+++ b/GDriveUploader.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ali-mmagneto/videomerger/blob/master/muxbot.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ali-mmagneto/GDriveUploader/blob/master/GDriveUploader.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -67,8 +67,8 @@
       },
       "source": [
         "!apt install ffmpeg\n",
-        "!git clone https://github.com/ali-mmagneto/videomerger\n",
-        "%cd videomerger"
+        "!git clone https://github.com/ali-mmagneto/GDriveUploader\n",
+        "%cd GDriveUploader"
       ],
       "execution_count": null,
       "outputs": []
@@ -112,7 +112,7 @@
         "id": "k2ARB3FQQyI-"
       },
       "source": [
-        "!python3 muxbot.py"
+        "!python3 bot.py"
       ],
       "execution_count": null,
       "outputs": []
